# Memoria_V2.X.X

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playback_widge.cpp  playback_widge.h  playback_widge.ui  progressbardelegate.cpp  progressbardelegate.h  setting_dialog.cpp  setting_dialog.h  setting_dialog.ui  singleline_import_dialog.cpp  singleline_import_dialog.h  singleline_import_dialog.ui  tablecolumns.cpp  tablecolumns.h  videoitem.cpp  videoitem.h
data_models/: tablecolumns.cpp  tablecolumns.h  tablemanager.cpp  tablemanager.h  videoitem.cpp  videoitem.h
data_models/dialogs/: singleline_import_dialog.cpp  singleline_import_dialog.ui
delegates/: deletemode.h  exportmode.h  progressbardelegate.cpp  progressbardelegate.h
delegates/data_models/: videoitem.cpp  videoitem.h
delegates/data_models/dialogs/: del_setting_dialog.cpp  export_setting_dialog.cpp  setting_dialog.cpp  setting_dialog.ui
delegates/dialogs/: del_setting_dialog.h  export_setting_dialog.ui  setting_dialog.h
dialogs/: del_setting_dialog.cpp  del_setting_dialog.ui  export_setting_dialog.cpp  export_setting_dialog.h  setting_dialog.cpp  setting_dialog.h  singleline_import_dialog.h
managers/: contextmenumanager.cpp  contextmenumanager.h  mergemanager.cpp  mergemanager.h
